  (Eric Le Lay)

- The JeditBuffer class now have thread-safe getText() params-less convenience
  method (Vadim Voituk)

}}}
{{{ Editing

- Added haxe.xml and hxml mode files to support haXe language
  (Dion Whitehead, François Rey, # 2922986)

- Added plaintex.xml mode file, for plain tex files. (# 2787012 - James Nicholl)

- When pasting text copied from the textarea, if the target textarea has
  no edit mode, the edit mode from the source is copied (Matthieu Casanova)

- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Ruby mode - keyword highlighting bug fix ( # 2868654 - Suraj Kurapati)

- Updated logtalk.xml file (# 2937909 - Paulo Moura)

- Slax Edit Mode ( # 2883030 - curtis_call )

- Json edit mode ( # 2979745 - Dale Anson )

- PHP Smarty Templates Mode ( # 2969956 - Rowan Collins)

- Haskell edit mode rewrite ( # 2993269 - Stephen Blackheath)

- Pure edit mode updates ( # 2988741 - asitdepends)

- url.xml mode (# 1991306 - Kevin Hunter)

- LaTeX mode - code indentation (2872638 - Michael Schlotter)

- 'dot.xml' mode file indent{Open,Close}Brackets wrong
  (#3008614 - Robin Neatherway)

- Added logtalk.xml mode file (#1945284 - Paulo Moura)

- Added regex.xml mode file (#2782258 - Kevin Hunter)

- Added sip.xml mode file to read sip messages (Matthieu Casanova)

- New paste special action accessible from menu
  Edit->More clipboard->Paste Special that will suggest different mode to paste
  data from clipboard, currently plain text, rich jEdit text
  (plain text + edit mode) and mime type html are supported (Matthieu Casanova)

}}}
{{{ Miscellaneous

- It is now possible to copy several files in the VFS Browser at the same time,
  and copy from/to the OS explorer (Matthieu Casanova)

- Removed LatestVersion plugin.

- HelpViewer font can be configured via Appearance Option Pane. (#3002186 - Alan Ezust)
